@@ -34,6 +34,8 @@ http://svn.edgewall.org/repos/babel/tags/1.0.0/
  * Only use bankers round algorithm as a tie breaker if there are two nearest
    numbers, round as usual if there is only one nearest number (#267, patch by 
    Martin)
+ * Allow disabling cache behaviour in LazyProxy (#208, initial patch Pedro 
+   Algarvio)
 
 
 Version 0.9.6
